# crab.rs

./: .coderabbit.yaml  .dockerignore  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  features.md  problems.md  tree.md
.github/: labeler.yml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  docker.yml  docs.yml  nightly.yml  pr-labeler.yml  release.yml  security.yml  stale.yml
bench/: README.md
crab.rs/: Cargo.toml  run_test.sh  test_fix.sh
crab.rs/crab-cli/: Cargo.toml
crab.rs/crab-cli/src/: c_compiler.rs  main.rs
crab.rs/crab-cli/src/commands/: add.rs  build.rs  check.rs  clean.rs  doc.rs  fmt.rs  lint.rs  mod.rs  new.rs  publish.rs  remove.rs  run.rs  test.rs
crab.rs/crab-cli/src/utils/: fs.rs
crab.rs/crab-codegen/: Cargo.toml
crab.rs/crab-codegen/src/: c_interop.rs  codegen.rs  lib.rs  null_safety.rs  type_mapper.rs
crab.rs/crab-core/: Cargo.toml
crab.rs/crab-core/src/: lib.rs  manifest.rs
crab.rs/crab-ffi/: Cargo.toml
crab.rs/crab-lexer/: Cargo.toml
crab.rs/crab-lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
crab.rs/crab-parser/: Cargo.toml
crab.rs/crab-parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crab.rs/tests/: c_interop_e2e.rs  transpile_and_run.rs
docs/: package.json
examples/: 02_variables.crab  05_control_flow.crab  06_classes.crab  08_collections.crab  11_operators.crab  12_extensions.crab  13_strings.crab  README.md  hello.crab  null_safety.crab  test_const.crab  test_switch.crab  variables.crab
examples/cookie_shop_api/: README.md  crab.toml
examples/hello_test/: crab.toml
examples/test_01/: crab.toml
scripts/: build.sh  clean.sh  docker-compose.yml  fmt.sh  generate-docs.sh  install-local.sh  lint.sh  package-release.sh  publish.sh  test.sh
tools/crab-lsp/: Cargo.toml
tools/crab-lsp/src/: completion.rs  crate_cache.rs  main.rs
tools/treesitter-crab/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
tools/treesitter-crab/bindings/c/: tree-sitter-crab.pc.in
tools/treesitter-crab/bindings/c/tree_sitter/: tree-sitter-crab.h
tools/treesitter-crab/bindings/go/: binding.go  binding_test.go
tools/treesitter-crab/bindings/java/main/io/github/treesitter/jtreesitter/crab/: TreeSitterCrab.java
tools/treesitter-crab/bindings/java/test/: TreeSitterCrabTest.java
tools/treesitter-crab/bindings/node/: binding.cc  index.d.ts  index.js
tools/treesitter-crab/bindings/python/tests/: test_binding.py
tools/treesitter-crab/bindings/python/tree_sitter_crab/: __init__.py  binding.c
tools/treesitter-crab/bindings/rust/: build.rs  lib.rs
tools/treesitter-crab/bindings/swift/TreeSitterCrabTests/: TreeSitterCrabTests.swift
tools/treesitter-crab/bindings/zig/: root.zig  test.zig
(+88 files in other folders)
