[package]
name = "crab-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
tower-lsp = "0.20.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
anyhow = "1.0.102"
dashmap = "6.0"
ropey = "1.6"
reqwest = { version = "0.13.3", features = ["json"] }
toml = "1.1.2+spec-1.1.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.crab-parser]
path = "../../crab.rs/crab-parser"

[dependencies.crab-lexer]
path = "../../crab.rs/crab-lexer"
