[package]
name = "tree-sitter-crab"
description = "treesitter grammer for crab language"
version = "0.1.0"
authors = ["crabdotrs <irustenjoyer@proton.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "crab"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/crabdotrs/crab.rs"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
